--- a/server/server.css
+++ b/server/server.css
@@ -10,10 +10,10 @@
     font-size: large;
     text-align: left;
 	text-indent: 10px;
-	color: white;
+	color: rgb(255, 255, 255);
     border-radius: 10px 35px 10px 10px;
 	/* Générateur de code couleur -- http://www.workwithcolor.com/hsl-color-picker-01.htm */
-    background: hsla(20, 96%, 59%, 0.4);
+    background: hsla(19, 98%, 49%, 0.808)
   }
 
 
@@ -101,7 +101,32 @@
     margin-top: 60%;
 }
 
- 
+#puissancex{
+    height: 80%;
+    position: fixed;
+    left: 1000px;
+    top: 20%;
+    width: 500px;
+    margin: 0 0 0 0;
+	padding: 10px 0px 10px 35px;
+    font-weight: bold;
+    font-size: large;
+    text-align: left;
+	text-indent: 10px;
+}
 
+#puissancey{
+    height: 80%;
+    position: fixed;
+    left: 250px;
+    top: 20%;
+    width: 500px;
+    margin: 0 0 0 0;
+	padding: 10px 0px 10px 35px;
+    font-weight: bold;
+    font-size: large;
+    text-align: left;
+	text-indent: 10px;
+}
 
 
