--- a/server/devices.css
+++ b/server/devices.css
@@ -1,14 +1,34 @@
 .list-appareils {
     position: absolute;
-    left: 20%;
+    left: 250px;
     top: 50px;
 }
 
 .list-appareils ul {
     list-style: none;
+    cursor: pointer;
     padding: 0;
 }
 
+.list-appareils li:hover {
+    background-color: hsla(0, 1%, 60%, 0.608);
+    border-radius: 15px;
+    padding-left: 10px;
+    margin-left: -10px;
+    width: 150px;
+}
+
 .list-appareils li {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    border-radius: 15px;
+    padding-left: 10px;
+    margin-left: -10px;
+    width: 150px;
+    transition: background-color 0.2s, color 0.2s;
+}
+
+.device-info {
+    position: absolute;
+    left: 50%;
+    top: 50px;
 }
