--- a/server/devices.css
+++ b/server/devices.css
@@ -32,3 +32,11 @@
     left: 50%;
     top: 50px;
 }
+
+.device-chart {
+    position:absolute;
+    left: 50%;
+    top: 50%;
+    width: 40%;
+    height: 40%
+}
