added GPS infos of devices

--- a/server/devices.css
+++ b/server/devices.css
@@ -31,11 +31,15 @@
     position: absolute;
     left: 50%;
     top: 50px;
-    width: 40%;
-    height: 40%
+    width: 45%;
+    height: 45%;
+}
+
+#selected-device-coordinates {
+    cursor: pointer;
 }
 
 .device-info canvas {
-    position:relative;
-    top: 50%; 
+    position: relative;
+    top: 100px;
 }
