--- a/server/graph.css
+++ b/server/graph.css
@@ -1,56 +1,29 @@
-#axex{
-    height: 80%;
-    position: fixed;
-    left: 1000px;
-    top: 10%;
-    width: 500px;
-    margin: 0 0 0 0;
-	padding: 10px 0px 10px 35px;
-    font-weight: bold;
-    font-size: large;
+.graph {
+    position: absolute;
+    left: max(50%, 600px);
+    right: 50px;
+    top: 70px;
+    min-width: 300px;
+}
+
+.graph canvas {
+    margin-bottom: 50px;    
+}
+
+#tabdevice {
+    position: absolute;
+    left: 350px;
+    top: 50px;
+    margin-top: 20px;
     text-align: left;
-	text-indent: 10px;
 }
 
-#axey{
-    height: 80%;
-    position: fixed;
-    left: 250px;
-    top: 10%;
-    width: 500px;
-    margin: 0 0 0 0;
-	padding: 10px 0px 10px 35px;
-    font-weight: bold;
-    font-size: large;
-    text-align: left;
-	text-indent: 10px;
-}
-
-#axez{
-    height: 80%;
-    position: fixed;
-    left: 250px;
-    top: 50%;
-    width: 500px;
-    margin: 0 0 0 0;
-	padding: 10px 0px 10px 35px;
-    font-weight: bold;
-    font-size: large;
-    text-align: left;
-	text-indent: 10px;
-}
-
-#tabdevice{
-    height: 100px;
-    position: fixed;
-    left: 1100px;
-    top: 50%;
-    width: 300px;
-    font-size: 13px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-}
-
-#titleline{
+.titleline {
     font-weight:bold;
+    font-size: 24px;
+}
+
+.titleline td {
+    padding-bottom: 50px;
+    padding-right: 5px;
 }
