--- a/server/devices.css
+++ b/server/devices.css
@@ -1,7 +1,11 @@
 .dynamic-device-list {
     position: absolute;
     left: 350px;
-    top: 50px;
+    top: 80px;
+}
+
+.dynamic-device-list h2 {
+    margin-top: 0px;
 }
 
 .dynamic-device-list ul {
@@ -31,9 +35,14 @@
     position: absolute;
     left: max(50%, 600px);
     right: 50px;
-    top: 50px;
+    top: 80px;
     height: 45%;
     min-width: 400px;
+}
+
+.device-info h2 {
+    margin-top: 0;
+    margin-bottom: 20px;
 }
 
 #selected-device-coordinates {
