--- a/server/graph.css
+++ b/server/graph.css
@@ -10,20 +10,28 @@
     margin-bottom: 50px;    
 }
 
-#tabdevice {
+.tableDevice {
     position: absolute;
     left: 350px;
-    top: 50px;
-    margin-top: 20px;
+    top: 80px;
     text-align: left;
+    border-spacing: 0px;
 }
 
-.titleline {
+.tableDevice thead tr {
     font-weight:bold;
     font-size: 24px;
 }
 
-.titleline td {
-    padding-bottom: 50px;
+.tableDevice thead td {
+    padding-bottom: 20px;
     padding-right: 5px;
+    padding-top: 0px;
+    padding-left: 0px;
+}
+
+.tableDevice tbody td {
+    padding-bottom: 5px;
+    padding-top: 0px;
+    padding-left: 0px;
 }
