--- a/server/graph.css
+++ b/server/graph.css
@@ -19,19 +19,19 @@
 
 .dynamic-downlink-list h2 {
     margin-top: 0px;
+    margin-bottom: 20px;
 }
 
 .dynamic-downlink-list ul {
     list-style: none;
     cursor: pointer;
     padding: 0;
+    margin-top: 0px;
 }
 
 .dynamic-downlink-list li:hover {
     background-color: hsla(0, 1%, 60%, 0.608);
     border-radius: 15px;
-    padding-left: 10px;
-    margin-left: -10px;
     width: 154px;
 }
 
@@ -42,4 +42,18 @@
     margin-left: -10px;
     width: 154px;
     transition: background-color 0.1s, color 0.1s;
+}
+
+.dynamic-downlink-list input {
+    border: 3px solid #ccc;
+    border-radius: 20px;
+    padding: 8px 12px;
+    font-size: 13.5px;
+    margin-bottom: 25px;
+    margin-left: -12px;
+    outline: none;
+}
+
+.dynamic-downlink-list input:focus {
+    border: 3px solid #000000;
 }
